Add social media icon badge

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,7 +21,7 @@
           <div class='logo'><a href="/">Y.A.N.A. Comox Valley</a></div>
           <!-- TODO: nested roles allowed? -->
           <nav class='site-nav' role='navigation'>
-            <div class="primary">
+            <div class="primary-nav">
               <ul>
                 <li><%= link_to 'Get Support', '#todo' %></li>
                 <li><%= link_to 'Fundraise', '#todo' %></li>
@@ -30,7 +30,7 @@
               </ul>
             </div>
 
-            <div class="secondary">
+            <div class="secondary-nav">
               <div class="inner">
                 <ul>
                   <li><%= link_to 'Events', '#todo' %></li>
@@ -38,7 +38,7 @@
                   <li class="current"><%= link_to 'About', '#todo' %></li>
                   <li><%= link_to 'Stories', '#todo' %></li>
                   <li><%= link_to 'Contact', '#todo' %></li>
-                  <li class="facebook"><%= link_to 'Facebook', 'https://www.facebook.com/pages/YANA-Comox-Valley/9846076614' %></li>
+                  <li class="badge"><a class="icon-badge facebook-badge" href="https://www.facebook.com/pages/YANA-Comox-Valley/9846076614"><span class="icon icon-facebook"></span></a></li>
                 </ul>
               </div>
             </div>
