--- a/source/stylesheets/_widgets.scss
+++ b/source/stylesheets/_widgets.scss
@@ -11,3 +11,77 @@
     height: 100%;
   }
 }
+
+.icon-badge, .secondary-nav .icon-badge {
+  &, .icon {
+    display: inline-block;
+    width: em(54px);
+    height: em(48px);
+    padding: 0;
+    font-size: 1em;
+    line-height: (48/16);
+    letter-spacing: 0;
+    text-transform: none;
+    text-align: center;
+    vertical-align: middle;
+  }
+}
+
+.icon-badge {
+  margin: em(18px) em(18px) em(18px) 0;
+}
+
+.facebook-badge {
+  &, & .icon { color: #fff; }
+
+  background-color: lighten(#325B99, 50%);
+  background-color: rgba(#325B99, 0.15);
+  transition: 100ms all ease-out;
+
+  &:hover, &:focus {
+    background-color: lighten(#325B99, 10%);
+    background-color: rgba(#325B99, 0.90);
+  }
+  &:active {
+    background-color: #325B99;
+    background-color: rgba(#325B99, 1);
+  }
+}
+
+.twitter-badge {
+  &, & .icon { color: #fff; }
+
+  background-color: lighten(#4099FF, 50%);
+  background-color: rgba(#4099FF, 0.15);
+  transition: 100ms all ease-out;
+
+  &:hover, &:focus {
+    background-color: lighten(#4099FF, 10%);
+    background-color: rgba(#4099FF, 0.90);
+  }
+  &:active {
+    background-color: #4099FF;
+    background-color: rgba(#4099FF, 1);
+  }
+}
+
+.instagram-badge {
+  &, & .icon { color: #fff; }
+
+  background-color: lighten(#517fa4, 50%);
+  background-color: rgba(#517fa4, 0.15);
+  transition: 100ms all ease-out;
+
+  &:hover, &:focus {
+    background-color: lighten(#517fa4, 10%);
+    background-color: rgba(#517fa4, 0.90);
+  }
+  &:active {
+    background-color: #517fa4;
+    background-color: rgba(#517fa4, 1);
+  }
+}
+
+
+
+
