--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -85,3 +85,9 @@ title: YANA
 <p><strong>Bold</strong></p>
 
 <button class="btn">Button style</button>
+
+<div>
+  <a class="icon-badge facebook-badge" href="https://www.facebook.com/pages/YANA-Comox-Valley/9846076614"><span class="icon icon-facebook"></span></a>
+  <a class="icon-badge twitter-badge" href="#todo"><span class="icon icon-twitter"></span></a>
+  <a class="icon-badge instagram-badge" href="#todo"><span class="icon icon-instagram"></span></a>
+</div>
