High contrast mode

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -48,8 +48,11 @@
       <article class="site-body" role="main" id="main">
         <div class="content">
           <%= yield %>
+
+          <p><a href="#" class="toggle-contrast">Toggle high colour contrast mode</a></p>
         </div>
       </article>
+
       <a href="#page" class="skip-link">Back to the top</a>
     </div>
     <%= javascript_include_tag 'site' %>
