Underline links in high contrast mode

--- a/source/stylesheets/_high-contrast.scss
+++ b/source/stylesheets/_high-contrast.scss
@@ -13,6 +13,11 @@
     color: #31807b;
   }
 
+  .site-body a {
+    text-decoration: underline;
+    font-weight: bold;
+  }
+
   blockquote {
     color: #56717f;
   }
