Icon aria-hidden and labels

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -87,7 +87,7 @@ title: YANA
 <button class="btn">Button style</button>
 
 <div>
-  <a class="icon-badge facebook-badge" href="https://www.facebook.com/pages/YANA-Comox-Valley/9846076614"><span class="icon icon-facebook"></span></a>
-  <a class="icon-badge twitter-badge" href="#todo"><span class="icon icon-twitter"></span></a>
-  <a class="icon-badge instagram-badge" href="#todo"><span class="icon icon-instagram"></span></a>
+  <a class="icon-badge facebook-badge" href="https://www.facebook.com/pages/YANA-Comox-Valley/9846076614"><span aria-hidden="true" class="icon icon-facebook"></span><span class="label">Facebook</span></a>
+  <a class="icon-badge twitter-badge" href="#todo"><span aria-hidden="true" class="icon icon-twitter"></span><span class="label">Twitter</span></a>
+  <a class="icon-badge instagram-badge" href="#todo"><span aria-hidden="true" class="icon icon-instagram"></span><span class="label">Instagram</span></a>
 </div>
