--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -38,7 +38,7 @@
                   <li class="current"><%= link_to 'About', '#todo' %></li>
                   <li><%= link_to 'Stories', '#todo' %></li>
                   <li><%= link_to 'Contact', '#todo' %></li>
-                  <li class="badge"><a class="icon-badge facebook-badge" href="https://www.facebook.com/pages/YANA-Comox-Valley/9846076614"><span class="icon icon-facebook"></span></a></li>
+                  <li class="badge"><a class="icon-badge facebook-badge" href="https://www.facebook.com/pages/YANA-Comox-Valley/9846076614"><span aria-hidden="true" class="icon icon-facebook"></span><span class="label">Facebook</span></a></li>
                 </ul>
               </div>
             </div>
