--- a/www/wp-content/themes/yana/css/site.scss
+++ b/www/wp-content/themes/yana/css/site.scss
@@ -14,6 +14,7 @@ Author URI: http://dialect.ca/
 @import "header";
 @import "body";
 @import "sidebar";
+@import "events";
 @import "footer";
 
 @import "high-contrast";
