Event inner pages and general styles

--- a/www/wp-content/themes/yana/css/_typography.scss
+++ b/www/wp-content/themes/yana/css/_typography.scss
@@ -149,10 +149,12 @@ blockquote + p {
   transition: 100ms background ease-out;
 
   &:hover, &:focus {
+    color: #fff;
     background-color: $lightteal;
   }
 
   &:active {
+    color: #fff;
     background-color: lighten($lightteal, 10%);
   }
 }
