--- a/www/wp-content/themes/yana/css/_events.scss
+++ b/www/wp-content/themes/yana/css/_events.scss
@@ -1,3 +1,10 @@
+.event-info {
+  // TODO
+  p {
+    @include sans-condensed(em(20px), (24/20));
+  }
+}
+
 .event-toc {
   .entry {
     margin: 0 0 em(36px);
@@ -18,6 +25,7 @@
 // Top priority
 ///////////////////////////
 .event-toc-0 {
+  margin: 0 0 em(54px);
   .entry {
     margin: 0 0 em(24px);
   }
