--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -231,6 +231,17 @@ blockquote + p { margin-top: 2.8em; }
 .sidebar-facebook-ad .inner { padding: 1.875em 1.5em; font-size: 1em; border: 2px solid #849DC2; }
 .sidebar-facebook-ad .frame, .sidebar-facebook-ad .inner { display: block; border-radius: 0.375em; }
 
+.sidebar-thank-yous .title-wrap { position: relative; margin-top: 24px; margin-left: -24px; margin-right: -24px; background: transparent url("img/sidebar-thank-you-banner.svg") 50% 0 no-repeat; background-size: contain; z-index: 3; }
+.sidebar-thank-yous .title { margin: 0; padding: 2em 1.5em 3em; font: normal 0.75em/2 "HelveticaNeueW01-75Bold", sans-serif; text-align: center; color: #fff; }
+.sidebar-thank-yous .frame { margin: 0 24px; border: 2px solid #E4E4E4; border-radius: 0.5em; padding: 0.25em; }
+.sidebar-thank-yous .inner { border: 1px solid #F0F0F0; border-radius: 0.5em; }
+.sidebar-thank-yous ul, .sidebar-thank-yous li { margin: 0; padding: 0; list-style: none; }
+.sidebar-thank-yous ul { position: relative; margin-top: -18px; z-index: 1; }
+.sidebar-thank-yous li { font-size: 1em; border-top: 1px solid #F0F0F0; }
+.sidebar-thank-yous li a { display: block; padding: 2.57143em 1.71429em; font-size: 0.875em; line-height: 1.42857; color: #7CBFC7; transition: all 100ms ease-out; }
+.sidebar-thank-yous li a:hover, .sidebar-thank-yous li a:focus { color: #2494A2; background-color: #FAFAFA; }
+.sidebar-thank-yous .entry-1 { border-top: 0; }
+
 .sidebar-image-ad { position: relative; margin: 0 1.5em 2.25em; }
 .sidebar-image-ad, .sidebar-image-ad .mask, .sidebar-image-ad .link, .sidebar-image-ad .image { height: 212px; }
 .sidebar-image-ad .mask, .sidebar-image-ad .link { position: absolute; width: 100%; left: 0; top: 0; }
